<resources>
    <string name="app_name">Login</string>
    <string name="registerActivity_title">Nuevo usuario</string>
    <string name="username_label">Nombre de usuario</string>
    <string name="password_label">Password</string>
    <string name="confirm_label">Confirmar Password</string>
    <string name="email_label">Email</string>

    <!-- Texto de registro -->
    <!-- Botones -->
    <string name="guardar_button">Guardar</string>
    <string name="regresar_button">Regresar</string>

    <!--Edit text -->
    <string name="Username">Ingrese su usuario</string>
    <string name="email">Ingrese su email</string>
    <string name="password">Ingrese su contraseña</string>
    <string name="confirm_password">Repita su contraseña</string>


    <!-- Texto para login -->
    <string name="login_title">Login de usuario</string>"
    <string name="registrar_action">Registrar</string>
    <string name="salir_action">Salir</string>
    <string name="usuario">Usuario</string>
    <string name="ingresar">Ingresar</string>

    <!-- Texto de home -->
    <string name="hello">Hello World</string>
    <string name="fragment">Home fragment</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_productos">Productos</string>
    <string name="inicio_fragment">Inicio Fragment</string>
    <string name="perfil_fragment">Perfil Fragment</string>
    <string name="productos_fragment">Productos Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>