<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:background="#2560f5"
        android:fitsSystemWindows="false"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/login_title"
        app:titleTextColor="#ffffff" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="40dp"
        android:text="@string/usuario"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/edtUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="396dp"
        android:text="@string/password_label"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtContra"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:hint="Ingrese su usuario"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edtContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edtContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="465dp"
        android:ems="10"
        android:hint="Ingrese su contraseña"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsuario" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="249dp"
        android:text="@string/salir_action"
        android:backgroundTint="#2560f5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnIngresar"
        app:layout_constraintTop_toBottomOf="@+id/edtContra"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="249dp"
        android:text="@string/ingresar"
        android:backgroundTint="#2560f5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSalir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContra"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>